--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,12 +1,16 @@
 <h1>add a new photo</h1>
+<div>
+
 
 <form action="http://localhost:3000/create_photo">
   <label>Caption</label>
   <input type="text" name="the_caption">
-
+</div>
+<div>
   <label>Source</label>
   <input type="text" name="the_source">
-
+</div>
+<div>
   <button> Create Photo</button>
-
+</div>
 </form>
