--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Photo</h1>
 
-<form action="/update_photo/">
+<form action="/photos/update_photo/<%= @photo.id %>">
   <label for="">Caption:</label>
   <input type="text" name="the_caption" value="<%= @photo.caption %>">
 
