--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Photo</h1>
-<form action="http://localhost:3000/update_photo/:id">
+<form action="http://localhost:3000/update_photo/<%= @photo.id %>">
   <label for="caption">Caption:</label>
   <input name="image_caption" id="caption" type="text" value="<%= @photo.caption %>"><br>
   <label for="url">Image URL:</label>
