--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,13 +1,13 @@
 <h1>Add A New photo</h1>
 
-<form>
+<form action="/create_photo">
   <div>
   <label>Caption</label>
-  <input type="text" name="">
+  <input type="text" name="the_caption">
   </div>
   <div>
   <label>Image URL</label>
-  <input type="text" name="">
+  <input type="text" name="the_source">
   </div>
   <div>
   <button>Create Photo</button>
