--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,12 +1,17 @@
-<h1>Add a New Photo</h1>
+<h1>Add A New Photo</h1>
 
 <form action="http://localhost:3000/create_photo">
   <label>Caption:</label>
   <input type="text" name="the_caption">
+<div>
 
-  <label>Source:</label>
+
+  <label>Image URL:</label>
   <input type="text" name="the_source">
+</div>
+<div>
+    <button>Create Photo</button>
+</div>
 
-  <button>Create Photo</button>
 
 </form>
