--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,11 +1,11 @@
 <h1>Edit Photo</h1>
 
-<form action="/photos/update_photo/<%= @photo.id %>">
+<form action="http://localhost:3000/update_photo/<%= @photo.id %>">
   <label for="">Caption:</label>
   <input type="text" name="the_caption" value="<%= @photo.caption %>">
 
   <label for="">Image URL:</label>
   <input type="text" name="the_source" value="<%= @photo.source %>">
 
-  <button>Edit Photo</button>
+  <button>Update Photo</button>
 </form>
