--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,11 +1,11 @@
 <h1>Edit Photo</h1>
 
-<form action="http://localhost:3000/update_photo/<%= p %>" >
+<form action="http://localhost:3000/update_photo/<%= @pid %>" >
   <label>Caption:</label>
-  <input type="text" name="the_caption" value="<%= p.caption %>">
+  <input type="text" name="the_caption" value="<%= @pcaption %>">
 
   <label>Image URL:</label>
-  <input type="text" name="the_source" value="<%= p.source %>">
+  <input type="text" name="the_source" value="<%= @psource %>">
 
   <button>Update Photo</button>
 </form>
