Final changes made to match exact style.

--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,11 +1,13 @@
-<h1>Add a New Photo</h1>
+<h1>Add A New photo</h1>
 
 <form action="http://localhost:3000/create_photo">
-  <label for="caption">Caption</label>
-  <input type="text" name="caption" id="caption" value="">
-
-  <label for="source">Source</label>
-  <input type="text" name="source" id="source" value="">
-
+  <div>
+    <label for="caption">Caption:</label>
+    <input type="text" name="caption" id="caption" value="">
+  </div>
+  <div>
+    <label for="source">Image URL:</label>
+    <input type="text" name="source" id="source" value="">
+  </div>
   <button>Create Photo</button>
 </form>
