--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,6 +4,6 @@
 
 <p><%= @photo.caption %></p>
 
-<a href="./photos">Back</a>
-<a href=".">Edit</a>
-<a href="delete_photo">Delete</a>
+<a href="/photos">Back</a>
+<a href="/photos/<%= @photo.id %>/edit">Edit</a>
+<a href="/delete_photo/<%= @photo.id %>">Delete</a>
