--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -7,9 +7,9 @@
   <a href="http://localhost:3000/photos">Back</a>
 </td>
 <td>
-  <a href="http://localhost:3000/photos/<%= @photo_id %>">Edit</a>
+  <a href="http://localhost:3000/edit/<%= @photo_id %>">Edit</a>
 </td>
 <td>
-  <a href="http://localhost:3000/photos/delete_photo/<%= @photo_id %>">Delete</a>
+  <a href="http://localhost:3000/delete_photo/<%= @photo_id %>">Delete</a>
 </td>
 </tr>
