--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,11 +1,12 @@
 <h1>Photo Details</h1>
 
-<img src="<%= @url %>" alt="" width=600px height=400px/>
+<img src="<%= @image.source %>" alt="" idth=600px height=400px/>
+
 
 <p>
-<%= @caption %>
+<%= @image.caption %>
 </p>
 
 <a href="/photos">Back</a>
-<a href="#">Edit</a>
-<a href="#">Delete</a>
+<a href="http://localhost:3000/photos/<%= @image.id %>/edit">Edit</a>
+<a href="http://localhost:3000/delete_photo/<%= @image.id %>">Delete</a>
