--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,12 +1,17 @@
 <h1>Edit photo</h1>
 
-<form action="/update_photo/<%= @photo_id_e %>">
-  <label>Caption</label>
-  <input type="text" name="the_caption" value="<%= @photo_caption_e %>">
+<form action="/update_photo/<%= @photo.id %>">
+  <div>
 
-  <label for="">Image URL</label>
-  <input type="text" name="the_source" value="<%= @photo_source_e %>">
+  <label>Caption:</label>
+  <input type="text" name="the_caption" value="<%= @photo.caption %>">
+</div>
+<div>
 
+
+  <label for="">Image URL:</label>
+  <input type="text" name="the_source" value="<%= @photo.source %>">
+</div>
   <button>Update Photo</button>
 
 </form>
