--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,10 +1,16 @@
-<h1>Add a New Photo</h1>
+<h1>Add A New Photo</h1>
 <form action="/create_photo">
-  <label>Caption</label>
+  <div>
+
+  <label>Caption:</label>
   <input type="text" name="the_caption">
+</div>
 
-  <label>Source</label>
+<div>
+
+
+  <label>Image URL:</label>
   <input type="text" name="the_source">
-
+</div>
   <button>Create Photo</button>
 </form>
