--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Edit photo</h1>
-<form action="/edit_form/<% @photo.id %>">
+<form action="/update_photo/<%= @photo.id %>">
 
 <div>
   <label>Caption:</label>
@@ -13,5 +13,5 @@
 </div>
 
 <div>
-  <button>Update Photo</button>
+  <button>Update Row</button>
 </div>
