Added Create needs more work
Still need to save the db

--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,8 +1,8 @@
 <h1>Add a new photo</h1>
 
 
-
-<form action="http://localhost:3000/new_form">
+<!-- This will add the info to the url -->
+<form action="http://localhost:3000/photos/new">
   <label for="">caption:</label>
   <input type="text" name="the_caption">
 
@@ -10,7 +10,6 @@
   <input type="text" name="the_source">
   <button>Add</button>
 </form>
-
 
 
  <!-- Question: This is suppose to feed the url info, but what's wrong?
@@ -28,7 +27,7 @@ because of the value="" -->
   <button>Add</button>
 </form> -->
 
-Question: I accidentally added the content without wrapping it in form and it still appeared would it have functioned without the wrapping?
+<!-- Question:  Previously, I accidentally added the content without wrapping it in form and it still appeared would it have functioned without the wrapping? -->
 <!-- Note: the name is the key designation for database storage, also the url output-->
 <!-- <form>
   <label for="">caption:</label>
