--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Add A New photo</h1>
 
-<form action= "http://localhost:3000/create_photo">
+<form action= "/create_photo">
   <div>
     <label>Caption:</label>
     <input type="text" name="the_caption">
