--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,6 +4,6 @@
 
 <p><%= @photo.caption %></p>
 
-<a href="http://localhost:3000/photos">Back </a>
-<a href="http://localhost:3000/photos/<%= @photo.id %>/edit">Edit </a>
-<a href="http://localhost:3000/delete_photo/<%= @photo.id %>">Delete </a>
+<a href="/photos">Back </a>
+<a href="/photos/<%= @photo.id %>/edit">Edit </a>
+<a href="/delete_photo/<%= @photo.id %>">Delete </a>
