--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Add A New Photo</h1>
 
-<form class="" action="/create_photo" method="post">
+<form class="" action="/create_photo">
 
   <label for="caption">Caption:</label>
   <input id="caption" type="text" name="caption" value="">
@@ -8,5 +8,5 @@
   <label for="source">Source:</label>
   <input id="caption" type="text" name="source" value="">
 
-  <button type="button" name="button"><a href="/photos">Create Photo</a></button>
+  <button><a href="/photos">Create Photo</a></button>
 </form>
