--- a/app/views/photos/edit_photo.html.erb
+++ b/app/views/photos/edit_photo.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit photo</h1>
 
-<form class="" action="http://localhost:3000/update_photo/<%= Eedit.id %>">
+<form class="" action="http://localhost:3000/update_photo/<%= @edit.id %>">
 
   <label>Caption:</label>
   <input type="text" name="the_caption" value="<%= @edit.caption %>">
