--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Photo</h1>
 
-<form class="" action="http://localhost:3000/update_photo/<%= @photo.id%>" method="post">
+<form action="/photos/<%= @photo.id%>/update_photo" >
 
   <label for="caption">Caption:</label>
   <input id="caption" type="text" name="caption" value="<%= @photo.caption%>">
@@ -8,5 +8,5 @@
   <label for="source">Source:</label>
   <input id="caption" type="text" name="source" value="<%= @photo.source%>">
 
-  <button type="button" name="button"><a href="/photos">Edit Photo</a></button>
+  <button>Edit Photo</button>
 </form>
