--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,11 +1,21 @@
-<h1>Add A New Photo</h1>
+<h1>Add A New photo</h1>
 
 <form action="http://localhost:3000/create_photo">
-  <label>Caption:</label>
-  <input type="text" name="the_caption" value="">
+  <div class="">
 
-  <label>Source</label>
-  <input type="text" name="the_source" value="">
 
-  <button>Create Photo</button>
+    <label>Caption:</label>
+    <input type="text" name="the_caption" value="">
+  </div>
+  <div class="">
+
+
+    <label>Image URL:</label>
+    <input type="text" name="the_source" value="">
+  </div>
+  <div class="">
+
+
+    <button>Create Photo</button>
+  </div>
 </form>
