--- a/app/views/photos/edit_row.html.erb
+++ b/app/views/photos/edit_row.html.erb
@@ -3,7 +3,7 @@
 <!-- # <% p = Photo.find_by({ :id => params[:id] }) %> -->
 <!-- # <%caption = p.caption%> -->
 
-<form action="http://localhost:3000/edit/<%= @photo_id %>">
+<form action="http://localhost:3000/editsave/<%= @p.id %>">
   <!-- <form action="http://localhost:3000/edit/<= @photo_id %>"> -->
   <!-- calls back to routs.db and takes us to create_row -->
 
@@ -11,13 +11,13 @@
 
 
     <label>Caption:</label>
-    <input type="text" name="the_caption" value="<%= p.caption %>">
+    <input type="text" name="the_caption" value="<%= @p.caption %>">
   </div>
   <div class="">
 
   </div>
   <label>Image URL:</label>
-  <input type="text" name="the_source" value="<%= p.source %>">
+  <input type="text" name="the_source" value="<%= @p.source %>">
 </div>
 <div class="">
 
