--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Add A New photo</h1>
 
-<form action="/create_photo">
+<form action="/new">
   <div>
     <label for="photo_caption">Caption:</label>
     <input id="photo_caption" type="text" name="the_caption">
