--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,7 +1,9 @@
 <h1>Photo Deatils</h1>
 
 <img src="<%= @photo.source %>" width="720">
-<p><%= @photo.caption %></p>
+<p>
+  <%= @photo.caption %>
+</p>
 
 <a href="/photos">Back</a>
 <a href="/photos/<%= @photo.id %>">Edit</a>
