--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -2,10 +2,10 @@
 
 <form action="http://localhost:3000/create_photo">
 
-  <label> Caption </label>
+  <label> Caption: </label>
   <input type="text" name="the_caption">
 
-  <label> Source </label>
+  <label> Source: </label>
   <input type="text" name="the_source">
 
   <button>Create Photo</button>
