--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -5,7 +5,7 @@
   <label> Caption: </label>
   <input type="text" name="the_caption">
 
-  <label> Source: </label>
+  <label> Image URL: </label>
   <input type="text" name="the_source">
 
   <button>Create Photo</button>
