--- a/app/views/photos/edit_photo.html.erb
+++ b/app/views/photos/edit_photo.html.erb
@@ -1,13 +1,13 @@
 <h1>Edit photo</h1>
 
-<form action=http://localhost:3000/update_photo/"<%=@photo_id%>">
+<form action="/update_photo/<%=@photo.id%>">
   <div>
     <label for="photo_caption">Caption:</label>
-    <input id="photo_caption" type="text" name="the_caption" value="<%= @caption %>">
+    <input id="photo_caption" type="text" name="the_caption" value="<%= @photo.caption %>">
   </div>
   <div>
     <label for="photo_image_url">Image URL:</label>
-    <input id="photo_image_url" type="text" name="the_source" value="<%= @source %>">
+    <input id="photo_image_url" type="text" name="the_source" value="<%= @photo.source %>">
   </div>
   <div>
     <button>Update Photo</button>
