--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -4,12 +4,12 @@
   <div class="">
 
 
-    <label for="the_caption">Caption</label>
+    <label for="the_caption">Caption:</label>
     <input type="text" name="the_caption">
   </div>
   <div class="">
-    
-    <label for="the_source">Source</label>
+
+    <label for="the_source">Source:</label>
     <input type="text" name="the_source">
   </div>
   <button>Create Photo</button>
