--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -2,7 +2,7 @@
 
 
 <!-- This will add the info to the url -->
-<form action="http://localhost:3000/photos/new">
+<form action="/create_photo">
   <label for="">caption:</label>
   <input type="text" name="the_caption">
 
