fixed form labels and ids

--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -2,13 +2,13 @@
 
 <form action="/create_photo">
   <div>
-    <label>Caption:</label>
-    <input type="text" name="the_caption">
+    <label for="caption">Caption:</label>
+    <input id="caption" type="text" name="the_caption">
   </div>
 
   <div>
-    <label>Image URL:</label>
-    <input type="text" name="the_source">
+    <label for="image_url">Image URL:</label>
+    <input id="image_url" type="text" name="the_source">
   </div>
 
   <div>
