--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,14 +1,14 @@
 <h1>Add A New photo</h1>
 
 <form action="http://localhost:3000/create_photo">
-  <label>Caption:</label>
-  <input type="text" name="the_caption">
+  <label for="the_caption">Caption:</label>
+  <input id="the_caption" type="text" name="the_caption">
 
   <div>
   </div>
 
-  <label>Image URL:</label>
-  <input type="text" name="the_source">
+  <label for="the_source">Image URL:</label>
+  <input id="the_source" type="text" name="the_source">
 
   <div>
   </div>
