--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -3,10 +3,10 @@
 
 <!-- This will add the info to the url -->
 <form action="/create_photo">
-  <label for="">caption:</label>
+  <label for="">Caption:</label>
   <input type="text" name="the_caption">
 
-  <label for="">source:</label>
+  <label for="">Image URL:</label>
   <input type="text" name="the_source">
   <button>Add</button>
 </form>
