--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Photo # <%= @photo_id %></h1>
 
-<form action="/update_row/<%= @photo_id %>">
+<form action="/update_photo/<%= @photo_id %>">
   <label for="">caption:</label>
   <input type="text" name="the_caption" value="<%= @photo_caption %>">
 
